--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "graphql": "^16.6.0",
+    "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.2.3",
