--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "description": "",
   "scripts": {
     "start": "start-storybook -p 6006",
-    "rollup": "rollup -c"
+    "build": "rollup -c"
   },
   "dependencies": {
     "antd": "^4.23.6",
