--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react-collapsed": "^3.5.0"
   },
   "peerDependencies": {
-    "react": ">18.2.0",
-    "react-dom": "^18.2.0"
+    "react": ">=16.0.0",
+    "react-dom": ">=16.0.0"
   },
   "devDependencies": {
     "@apollo/client": "^3.7.1",
